# mpi-test

./: CMakeLists.txt  README.md  build.sh
src/: mpihelloworld.cxx
