cmake_minimum_required( VERSION 2.8.10 FATAL_ERROR )

project( mpitest C CXX Fortran )
message(STATUS "CMAKE_VERSION: ${CMAKE_VERSION}")
message(STATUS "ENV{FC}: $ENV{FC}")
message(STATUS "ENV{CC}: $ENV{CC}")
message(STATUS "ENV{CXX}: $ENV{CXX}")
message(STATUS "ENV{MPI_HOME}: $ENV{MPI_HOME}")
message(STATUS "MPI_HOME: ${MPI_HOME}")
message(STATUS "ENV{I_MPI_ROOT}: $ENV{I_MPI_ROOT}")
message(STATUS "I_MPI_ROOT: ${I_MPI_ROOT}")
message(STATUS "MPI_Fortran_COMPILER: ${MPI_Fortran_COMPILER}")
message(STATUS "MPI_C_COMPILER: ${MPI_C_COMPILER}")
message(STATUS "MPI_CXX_COMPILER: ${MPI_CXX_COMPILER}")

message(STATUS "Running CMAKE FindMPI.cmake...")
find_package(MPI)

message(STATUS "MPI_FOUND: ${MPI_FOUND}")
message(STATUS "MPI_VERSION: ${MPI_VERSION}")
set(LANGS Fortran C CXX)
foreach(lang IN LISTS LANGS)
    message(STATUS "==== MPI ${lang} Status ====")
    message(STATUS "MPI_${lang}_FOUND: ${MPI_${lang}_FOUND}")
    message(STATUS "MPI_${lang}_VERSION: ${MPI_${lang}_VERSION}")
    message(STATUS "MPI_${lang}_COMPILER: ${MPI_${lang}_COMPILER}")
    message(STATUS "MPI_${lang}_COMPILE_OPTIONS: ${MPI_${lang}_COMPILE_OPTIONS}")
    message(STATUS "MPI_${lang}_COMPILE_DEFINITIONS: ${MPI_${lang}_COMPILE_DEFINITIONS}")
    message(STATUS "MPI_${lang}_INCLUDE_DIRS: ${MPI_${lang}_INCLUDE_DIRS}")
    message(STATUS "MPI_${lang}_LINK_FLAGS: ${MPI_${lang}_LINK_FLAGS}")
    message(STATUS "MPI_${lang}_LIBRARIES: ${MPI_${lang}_LIBRARIES}")
    if(TARGET MPI::MPI_${lang})
        message(STATUS "MPI::MPI_${lang} exists")
    else()
        message(STATUS "MPI::MPI_${lang} DOES NOT exist!")
    endif()
    message(STATUS "MPIEXEC_EXECUTABLE: ${MPIEXEC_EXECUTABLE}")
    message(STATUS "MPIEXEC_NUMPROC_FLAG: ${MPIEXEC_NUMPROC_FLAG}")
    message(STATUS "MPIEXEC_MAX_NUMPROCS: ${MPIEXEC_MAX_NUMPROCS}")
    message(STATUS "MPIEXEC_PREFLAGS: ${MPIEXEC_PREFLAGS}")
    message(STATUS "MPIEXEC_POSTFLAGS: ${MPIEXEC_POSTFLAGS}")
endforeach()

add_executable(testmpi src/mpihelloworld.cxx)
target_link_libraries(testmpi MPI::MPI_CXX)
